infrastructure/apps/media-server/seerr/seerr-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: jellyfin-headers
  namespace: media
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsPreload: true
    stsSeconds: 31536000
    customResponseHeaders:
      X-Robots-Tag: "none,noarchive,nosnippet,notranslate,noimageindex"
---
apiVersion: v1
kind: Service
metadata:
  name: seerr-svc
  namespace: media
spec:
  selector:
    app: seerr
  ports:
  - port: 80
    targetPort: 5055
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: seerr.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: seerr-svc
            port:
              number: 80
